k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wiz-lab
  labels:
    app.kubernetes.io/name: wiz-devsecops-lab
